sections/1_Overview of Cloud Native Security/lab_pss.yml
apiVersion: v1
kind: Namespace
metadata:
  name: permissive-ns
  labels:
    # Enforces the privileged Pod Security Standard on this namespace, allowing privileged operations.
    pod-security.kubernetes.io/enforce: privileged
    # Issues a warning if a pod does not comply with the privileged Pod Security Standard.
    pod-security.kubernetes.io/warn: privileged
    # Audits pod security violations against the privileged Pod Security Standard.
    pod-security.kubernetes.io/audit: privileged
  annotations:
    description: "Namespace with permissive Pod Security Standards"
---
apiVersion: v1
kind: Namespace
metadata:
  name: restrictive-ns
  labels:
    # Enforces the restricted Pod Security Standard on this namespace, disallowing privileged operations.
    pod-security.kubernetes.io/enforce: restricted
    # Issues a warning if a pod does not comply with the restricted Pod Security Standard.
    pod-security.kubernetes.io/warn: restricted
    # Audits pod security violations against the restricted Pod Security Standard.
    pod-security.kubernetes.io/audit: restricted
  annotations:
    description: "Namespace with restrictive Pod Security Standards"
---
apiVersion: v1
kind: Namespace
metadata:
  name: baseline-ns
  labels:
    # Enforces the baseline Pod Security Standard on this namespace, allowing some restricted operations.
    pod-security.kubernetes.io/enforce: baseline
    # Issues a warning if a pod does not comply with the baseline Pod Security Standard.
    pod-security.kubernetes.io/warn: baseline
    # Audits pod security violations against the baseline Pod Security Standard.
    pod-security.kubernetes.io/audit: baseline
  annotations:
    description: "Namespace with baseline Pod Security Standards"

---
apiVersion: v1
kind: Pod
metadata:
  name: permissive-pod
  namespace: permissive-ns
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      privileged: true
      allowPrivilegeEscalation: true
---
apiVersion: v1
kind: Pod
metadata:
  name: restrictive-pod
  namespace: restrictive-ns
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      privileged: false
      allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Pod
metadata:
  name: baseline-pod
  namespace: baseline-ns
  annotations:
    description: "Pod in baseline namespace with balanced privileges"
spec:
  serviceAccountName: default
  containers:
  - name: nginx
    image: nginx
    securityContext:
      privileged: false
      allowPrivilegeEscalation: false
      capabilities:
        drop:
        - ALL
